Replace hugo display math with double 10787

--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -101,7 +101,9 @@ $$
 
 De volgende stap is om alle termen met een $x$ als lettergedeelte naar de
 linkerkant te brengen. We [vormen de vergelijking om](omvormen) door de
-$\green{a_{rechts}x}$
+$$
+\green{a_{rechts}x}
+$$
 uit het **rechter**lid van de vergelijking af te trekken. Dan zal de
 $\green{a_{rechts}x}$ uit het
 rechterlid wegvallen en hebben we enkel in het linkerlid nog een $x$.
