--- a/src/content/lessen/wiskunde/logaritmen/logaritme/index.mdx
+++ b/src/content/lessen/wiskunde/logaritmen/logaritme/index.mdx
@@ -14,7 +14,9 @@ Hipparchos stelde een **magnitudeschaal** op. Hij gaf de helderste sterren het c
 ## Wat is een logaritme?
 Een **logaritme** is eigenlijk steeds een **functie** <Mute text="(je stopt een getal in het machientje en je krijgt een ander ervoor terug)"/>, meer bepaald **het omgekeerde van de exponentiële functie**. Je hebt ook een **grondtal {{< class "a" "orange" >}}** nodig.
 
-$$^\orange{a}\\!\log x = y \Leftrightarrow x = \orange{a}^y$$
+$$
+^\orange{a}\\!\log x = y \Leftrightarrow x = \orange{a}^y
+$$
 
 | Je schrijft   | Je leest het als                   |
 |---------------|------------------------------------|
@@ -37,7 +39,9 @@ Verder in de definitie krijgen we dan **de betekenis** van een logaritme. De **u
 
 <Attention title="Logaritmen met 1 en 0">
 
-$$^a\\!\log a = 1 \text{, want } a^1 = a$$
+$$
+^a\\!\log a = 1 \text{, want } a^1 = a
+$$
 $$^a\\!\log 1 = 0 \text{, want } a^0 = 1$$  
 </Attention>
 
@@ -52,21 +56,33 @@ De **tweede basisformule** is $\udotgreen{a^{^a\\!\log x} = x}$. Nu staat de log
 
 Twee **voorbeelden** om beide te illustreren.
 
-$$^3\\!\log 9 = {^3}\\!\log 3^\orange{2} = \orange{2}$$
-$$3^{^3\\!\log \green{9}} = 3^2 = \green{9}$$
+$$
+^3\\!\log 9 = {^3}\\!\log 3^\orange{2} = \orange{2}
+$$
+$$
+3^{^3\\!\log \green{9}} = 3^2 = \green{9}
+$$
 
 ## Tiendelige en natuurlijke logaritmen
 Zoals we hebben gezien in de definitie van een logaritme, kan elk **strikt positief reëel getal, verschillend van 1** als grondtal dienstdoen. Nu zijn er in de wiskundige wereld twee **grondtallen** die we **niet schrijven**, maar waarvoor we een **andere notatie** gebruiken. 🌍
 
 Enerzijds is er de **tiendelige of Briggse logaritme**. Dit logaritme heeft als **grondtal 10**. We noteren: $\log x$. Wanneer je dus een **logaritme <Mute text="schijnbaar"/> zonder grondtal** tegenkomt, is dit een **Briggse logaritme**. Het tiendelige of Briggse logaritme **rekent relatief simpel** en wordt dus vaak gebruikt, voornamelijk in de fysica en sterrenkunde. ⭐
 
-$$\log 10 = 1 \text{, want } 10^1 = 10$$
-$$\log 1000 = 3 \text{, want } 10^3 = 1000$$
-$$\log (0.01) = -2 \text{, want } 10^{-2} = 0.01$$
+$$
+\log 10 = 1 \text{, want } 10^1 = 10
+$$
+$$
+\log 1000 = 3 \text{, want } 10^3 = 1000
+$$
+$$
+\log (0.01) = -2 \text{, want } 10^{-2} = 0.01
+$$
 
 Anderzijds is er de **natuurlijke of Neperiaanse logaritme**. Dit logaritme heeft als **grondtal $e$** ($\approx 2,718$). We noteren: $\ln x$. Het getal $e$ is heel handig bij de (wiskundige) **analyse** en krijgt daarom zijn eigen notatie. Het natuurlijke of Neperiaanse logaritme wordt voornamelijk door **wiskundigen** gebruikt.
 
-$$\ln 10 \approx 2.3026 \text{, want } e^{2.3026} = 10$$
+$$
+\ln 10 \approx 2.3026 \text{, want } e^{2.3026} = 10
+$$
 
 {{< expand "Een wiskundig mopje" >}}
 Een tiendelige en een natuurlijke logaritme gingen naar de bar in Frankrijk. 🍺 Ze bestelden allebei een drankje en hadden het prima naar hun zin. Na een tijdje kwam de barman vragen wie er ging betalen, waarop het tiendelige logaritme antwoordde: "Moi, parce qu'il *ne pais rien*." 🥁😂
@@ -83,12 +99,16 @@ In de inleiding hadden we het reeds laten vallen: de **logaritmische schaal**. E
 De **logaritme** met **grondtal** $\orange{a} \in \mathbb{R}^+_0 \backslash \\{1\\}$ van een **strikt positief reëel getal** is de **exponent van de macht** waartoe we $a$ moeten verheffen om dit getal te krijgen.
 
 In symbolen:
-$$\forall a \in \mathbb{R}^+_0 \backslash \\{1\\}, \forall x \in \mathbb{R}^+_0: {^\orange{a}}\\!\log x = y \Leftrightarrow x = \orange{a}^y$$
+$$
+\forall a \in \mathbb{R}^+_0 \backslash \\{1\\}, \forall x \in \mathbb{R}^+_0: {^\orange{a}}\\!\log x = y \Leftrightarrow x = \orange{a}^y
+$$
 </Attention>
 
 <Attention title="De basisformules">
 
-$$^a\\!\log a^y = y$$
+$$
+^a\\!\log a^y = y
+$$
 $$a^{^a\\!\log x} = x$$  
 </Attention>
 
