--- a/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
@@ -85,7 +85,9 @@ Meetkunde bevat jammer genoeg - voor sommigen - relatief veel **definities**. Ma
  
 M is het midden van een lijnstuk [AB] als en slechts als M op het lijnstuk [AB] ligt en het lijnstuk verdeeld is in twee even lange stukken.
 
-$$M = mi[AB] \Leftrightarrow |AM| = |BM| \text{ en } M \in [AB] $$
+$$
+M = mi[AB] \Leftrightarrow |AM| = |BM| \text{ en } M \in [AB] 
+$$
 </Attention>
 
 Wat wil dit nu precies zeggen? 🧐 Stap per stap gaan we erdoorheen! **M** is een hoofdletter en verwijst hier dus naar **een punt M**. Dan komen we mi[AB] tegen. Dat betekent **het midden van** het lijnstuk **[AB]**.
@@ -117,5 +119,7 @@ Om betekenis te geven aan de **lengte van een lijnstuk |AB|**, gebruiken we **ee
 
 M is het midden van een lijnstuk [AB] als en slechts als M op het lijnstuk [AB] ligt en het lijnstuk verdeelt is in twee even lange stukken.
 
-$$M = mi[AB] \Leftrightarrow |AM| = |BM| \text{ en } M \in [AB] $$
+$$
+M = mi[AB] \Leftrightarrow |AM| = |BM| \text{ en } M \in [AB] 
+$$
 </Attention>
