--- a/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
@@ -18,7 +18,7 @@ De **vlakke meetkunde** speelt zich af in **twee dimensies**, terwijl de **ruimt
 
 En dingen met **één dimensie** dan? 🤔 Wel, die kun je voorstellen op **een enkele rechte** (zoals de getallenas). Je kan dus alleen punten gebruiken als je iets in deze dimensie wilt plaatsen. 
 
-Wil je **in een vlak** <Mute text="dat twee dimensies heeft"/> iets plaatsen, dan kan je kiezen voor allerlei **vlakke figuren**. Denk hierbij aan trapezia, parallellogrammen, vierkanten, driehoeken... Het is **in de ruimte** {{< mute "die drie dimensies heeft" >}} dat je **ruimtefiguren** tegenkomt. Voorbeelden hiervan zijn de kubus, de balk, de cilinder en de *parallellepipedum* {{< mute "(dat is de overeenkomstige ruimtefiguur van een parallellogram)">}} (we konden deze geweldige naam niet weglaten 😊🎶). 
+Wil je **in een vlak** <Mute text="dat twee dimensies heeft"/> iets plaatsen, dan kan je kiezen voor allerlei **vlakke figuren**. Denk hierbij aan trapezia, parallellogrammen, vierkanten, driehoeken... Het is **in de ruimte** <Mute text="die drie dimensies heeft"/> dat je **ruimtefiguren** tegenkomt. Voorbeelden hiervan zijn de kubus, de balk, de cilinder en de *parallellepipedum* {{< mute "(dat is de overeenkomstige ruimtefiguur van een parallellogram)">}} (we konden deze geweldige naam niet weglaten 😊🎶). 
 
 ## Enkele vlakke figuren
 Voor de volledigheid vermelden we hier nog even **de vlakke figuren** waarvan je verondersteld wordt ze te kennen. 
