--- a/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
@@ -16,7 +16,9 @@ Ongetwijfeld ken je al verschillende **oppervlaktematen**. Denk maar aan **cm²,
 
 De reden is simpel: we **vermenigvuldigen twee afstandsmaten** <Mute text="(zoals cm of m)"/> met elkaar om een oppervlakte te bekomen. Net zoals met getallen, kunnen we als volgt redeneren:
 
-$$ 4 \cdot 4 = 4^2 \text{ dus } \si{cm} \cdot \si{cm} = \si{cm}^\orange{2}$$
+$$
+ 4 \cdot 4 = 4^2 \text{ dus } \si{cm} \cdot \si{cm} = \si{cm}^\orange{2}
+$$
 
 Met eenheden rekenen is niet anders dan met gewone getallen.
 
