--- a/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
@@ -78,20 +78,28 @@ Er bestaan verschillende **speciale breuken**. Dit zijn breuken met **een bepaal
 
 Sommige breuken zien er anders uit, maar zijn eigenlijk gelijk aan elkaar. Zulke breuken noemen we **gelijkwaardige breuken**. Of ze nu zeggen dat je $\frac{1}{2}$ van de pizza krijgt of $\frac{2}{4}$, uiteindelijk zal je dezelfde hoeveelheid pizza kunnen eten. We kunnen namelijk zowel de teller als de noemer van $\frac{2}{4}$ **delen door {{< class "2" "orange" >}}**. Dan krijgen we $\frac{1}{2}$.
 
-$$\frac{\frac{2}{\orange{2}}}{\frac{4}{\orange{2}}} = \frac{1}{2}$$
+$$
+\frac{\frac{2}{\orange{2}}}{\frac{4}{\orange{2}}} = \frac{1}{2}
+$$
 
 <Attention title="Handig!">
 
 Als je een breuk hebt, mag je steeds de **teller en noemer vermenigvuldigen of delen met eenzelfde getal**.
 
-$$\frac{25}{40} = \frac{\frac{25}{\orange{5}}}{\frac{40}{\orange{5}}} = \frac{5}{8}$$
-$$\frac{1}{2} = \frac{1 \cdot \orange{10}}{2 \cdot \orange{10}} = \frac{10}{20}$$
+$$
+\frac{25}{40} = \frac{\frac{25}{\orange{5}}}{\frac{40}{\orange{5}}} = \frac{5}{8}
+$$
+$$
+\frac{1}{2} = \frac{1 \cdot \orange{10}}{2 \cdot \orange{10}} = \frac{10}{20}
+$$
 
 </Attention>
 
 Een andere soort breuken die we vaak tegenkomen zijn de **gelijknamige breuken**. Gelijknamige breuken hebben **dezelfde noemer**. Enkele voorbeelden hiervan zijn:
 
-$$\frac{2}{\green{5}}, \frac{8}{\green{5}}, \frac{25}{\green{5}}$$
+$$
+\frac{2}{\green{5}}, \frac{8}{\green{5}}, \frac{25}{\green{5}}
+$$
 
 Laten we het laatste voorbeeld nog eens van dichterbij bekijken. 🔎 We kunnen $\frac{25}{5}$ namelijk ook schrijven als $\frac{5}{1}$ <Mute text="of simpelweg als 5."/> Als we dit doen is de breuk **niet meer gelijknamig** met de anderen, want de **noemer is veranderd**. 
 
