--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -25,7 +25,9 @@ Om een macht correct op te schrijven, schrijf je
 eerst het **grondtal** $a$. Vervolgens schrijf je de **exponent** $n$ iets kleiner
 en rechtsboven het grondtal.
 
-$$ a^n $$
+$$
+ a^n 
+$$
 
 Een macht met als **exponent $2$** noemen we ook een **kwadraat**.
 
@@ -38,14 +40,18 @@ Nu we weten hoe een macht eruitziet, willen we ook weten hoe we deze kunnen bere
 even het voorbeeld uit de inleiding <Mute text="($5 \cdot 5 \cdot 5$)"/>, waarvan we weten dat het gelijk is aan
 $5^3$. Hieruit kunnen we het volgende opmaken:
 
-$$ \underbrace{5 \cdot 5 \cdot 5}_{\orange{3}\ factoren} = 5\orange{^3} = 125$$
+$$
+ \underbrace{5 \cdot 5 \cdot 5}_{\orange{3}\ factoren} = 5\orange{^3} = 125
+$$
 
 Om $5^3$ te berekenen, vermenigvuldigen we $5$ dus $3$ keer met zichzelf, wat
 $125$ geeft. 
 
 **Algemeen** wordt dit:
 
-$$ \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n $$
+$$
+ \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n 
+$$
 
 <Attention title="Speciale machten">
 
@@ -57,9 +63,13 @@ Er zijn enkele 'speciale machten' die je best onthoudt:
 </Attention>
 
 ## Machten met negatieve grondtallen
-$$ 2\orange{^4}= \underbrace{2 \cdot 2 \cdot 2 \cdot 2}_{\orange{4}\ factoren} = 16$$
+$$
+ 2\orange{^4}= \underbrace{2 \cdot 2 \cdot 2 \cdot 2}_{\orange{4}\ factoren} = 16
+$$
 
-$$ -2\orange{^4}= \underbrace{(-2) \cdot (-2) \cdot (-2) \cdot (-2)}_{\orange{4}\ factoren} = 16$$
+$$
+ -2\orange{^4}= \underbrace{(-2) \cdot (-2) \cdot (-2) \cdot (-2)}_{\orange{4}\ factoren} = 16
+$$
 
 Het lijkt op het eerste zicht misschien vreemd dat $2^4$ en $(-2)^4$ dezelfde uitkomst hebben, maar als je dit stap voor stap uitwerkt zie je waarom 💪.
 
@@ -80,23 +90,31 @@ Is het aantal **even**, dan is de uitkomst **positief**. Is het aantal **oneven*
 ## Machten van breuken en kommagetallen
 Om de **macht van een breuk** te berekenen, verhef je **teller en noemer tot de macht**. Een macht is machtig genoeg om beide getallen te *bewerken*. 👑
 
-$$\left( \frac{3}{4} \right) ^2 = \frac{3^2}{4^2} = \frac{9}{16}$$
+$$
+\left( \frac{3}{4} \right) ^2 = \frac{3^2}{4^2} = \frac{9}{16}
+$$
 
 In symbolen:
-$$\left( \frac{a}{b} \right) ^n = \frac{a^n}{b^n}$$
+$$
+\left( \frac{a}{b} \right) ^n = \frac{a^n}{b^n}
+$$
 
 Om een **macht van een kommagetal** te berekenen, passen we wederom het **trucje** toe waarbij we de komma wegdenken. 🧙‍♂️
 
 Eerst bereken je het **resultaat zonder komma** en vervolgens bepaal je de **plaats van de komma**. Dit doe je door de **exponent** te **vermenigvuldigen** met het **oorspronkelijk aantal cijfers na de komma**.
 
-$$0.12^2 \rightarrow 12^2 = 144 \rightarrow 0.0144$$
+$$
+0.12^2 \rightarrow 12^2 = 144 \rightarrow 0.0144
+$$
 
 ## Samengevat
 <Attention title="Een macht berekenen">
 
 Algemeen geldt dat een macht met grondtal $a$ en exponent $n$ gelijk is aan:
 
-$$ \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n $$
+$$
+ \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n 
+$$
 
 Om te bepalen of een uitkomst positief of negatief is, tel je het *aantal mintekens*. Is het aantal **even**, dan is de uitkomst **positief**.
 Is het aantal **oneven**, dan is de uitkomst **negatief**.
@@ -107,7 +125,9 @@ Is het aantal **oneven**, dan is de uitkomst **negatief**.
 Om de **macht van een breuk** te berekenen, verhef je **teller en noemer tot de macht**.
 
 In symbolen:
-$$\left( \frac{a}{b} \right) ^n = \frac{a^n}{b^n}$$
+$$
+\left( \frac{a}{b} \right) ^n = \frac{a^n}{b^n}
+$$
 
 Om een **macht van een kommagetal** te berekenen, ga je als volgt te werk:
 1. Je berekent het **resultaat zonder komma** (je denkt de komma weg)
@@ -116,7 +136,11 @@ Om een **macht van een kommagetal** te berekenen, ga je als volgt te werk:
 
 <Attention title="Speciale machten">
 
-$$ a^0 = 1$$
-$$ a^1 = a$$
+$$
+ a^0 = 1
+$$
+$$
+ a^1 = a
+$$
 
 </Attention>
