--- a/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
@@ -52,20 +52,26 @@ $48$ wordt de **nieuwe noemer van beide breuken**.
 ### Nieuwe teller van de eerste breuk
 Nadat je de breuken op dezelfde noemer hebt gezet, moet je ook nog de **tellers aanpassen**. Anders zou je de breuk veranderen en dat willen we natuurlijk niet! 🙅 De nieuwe **teller van de eerste breuk** bekom je door de teller te **vermenigvuldigen** met de **(oude) noemer van de tweede breuk**.
 
-$$\frac{\green{1}}{8} \text{ en } \frac{1}{\green{6}} \rightarrow \green{1} \cdot \green{6} = 6$$
+$$
+\frac{\green{1}}{8} \text{ en } \frac{1}{\green{6}} \rightarrow \green{1} \cdot \green{6} = 6
+$$
 
 $6$ wordt de **nieuwe teller van de eerste breuk**.
 
 ### Nieuwe teller van de tweede breuk
 Nu moeten we enkel nog de nieuwe teller van de tweede breuk berekenen. Dit doen we door de **teller van de tweede breuk** te **vermenigvuldigen** met de **(oude) noemer van de eerste breuk**.
 
-$$\frac{1}{\green{8}} \text{ en } \frac{\green{1}}{6} \rightarrow \green{8} \cdot \green{1} = 8$$
+$$
+\frac{1}{\green{8}} \text{ en } \frac{\green{1}}{6} \rightarrow \green{8} \cdot \green{1} = 8
+$$
 
 $8$ wordt de **nieuwe teller van de tweede breuk**. 
 
 We bekomen dus **twee gelijknamige breuken** die gelijkwaardig zijn aan de originele: 
 
-$$\frac{1}{8} \text{ en } \frac{1}{6} = \frac{6}{48} \text{ en } \frac{8}{48}$$
+$$
+\frac{1}{8} \text{ en } \frac{1}{6} = \frac{6}{48} \text{ en } \frac{8}{48}
+$$
 
 Hoera! 👍
 
@@ -88,10 +94,18 @@ Eigenlijk rekenen kommagetallen niet veel anders dan gewone getallen. Je moet ge
 
 Vervolgens **doe je alsof de komma er niet staat** en reken je uit. **Vergeet daarna de komma niet terug op de juiste plaats te zetten!** Je moet altijd het aantal <Mute text="(de lengte)"/> cijfers na de komma behouden. Bijvoorbeeld:
 
-$$0.2 + 0.05 = 0.2\green{0} + 0.05 \rightarrow 20 + 5 = 25 \rightarrow 0.25$$
-$$0.752 - 0.57 = 0.752 - 0.57\green{0} \rightarrow 752 - 570 = 182 \rightarrow 0.182$$
-$$5.8 + 10 = 5.8 + 10\green{.0} \rightarrow 58 + 100 = 158 \rightarrow 15.8$$
-$$1.589 - 3.4 = 1.589 - 3.4\green{00} = -1.811$$
+$$
+0.2 + 0.05 = 0.2\green{0} + 0.05 \rightarrow 20 + 5 = 25 \rightarrow 0.25
+$$
+$$
+0.752 - 0.57 = 0.752 - 0.57\green{0} \rightarrow 752 - 570 = 182 \rightarrow 0.182
+$$
+$$
+5.8 + 10 = 5.8 + 10\green{.0} \rightarrow 58 + 100 = 158 \rightarrow 15.8
+$$
+$$
+1.589 - 3.4 = 1.589 - 3.4\green{00} = -1.811
+$$
  
 
 ## Samengevat
@@ -100,7 +114,9 @@ $$1.589 - 3.4 = 1.589 - 3.4\green{00} = -1.811$$
 Om breuken op te tellen of af te trekken moet je de **breuken eerst gelijknamig** maken en vervolgens de **tellers optellen of aftrekken**.
 
 In symbolen:
-$$\frac{a}{\orange{b}} \pm \frac{c}{\orange{b}} = \frac{a \pm c}{\orange{b}}$$
+$$
+\frac{a}{\orange{b}} \pm \frac{c}{\orange{b}} = \frac{a \pm c}{\orange{b}}
+$$
 </Attention>
 <Attention title="Breuken gelijknamig maken">
 
