--- a/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
@@ -50,16 +50,30 @@ Je kunt natuurlijk ook twee negatieve getallen bij elkaar optellen. Zo krijg je 
 
 Of je nu eerst $3$ stappen naar rechts en vervolgens $2$ stappen naar rechts zet, of eerst $2$ stappen en dan $3$ stappen, dat maakt geen verschil:
 
-$$3 + 2 = 5$$
-$$2 + 3 = 5$$
+$$
+3 + 2 = 5
+$$
+$$
+2 + 3 = 5
+$$
 
 We mogen dus de **termen in een optelling van plaats veranderen**. Wanneer de volgorde van het uitrekenen van een bewerking niet uitmaakt, zeggen we dat die bewerking **commutatief** is. Het optellen van gehele getallen is dus commutatief. Een ander voorbeeld:
 
-$$-8 + 5 + 10 = 7$$
-$$10 + 5 + (-8) = 7$$
-$$10 + (-8) + 5 = 7$$
-$$5 + 10 + (-8) = 7$$
-$$5 + (-8) + 10 = 7$$
+$$
+-8 + 5 + 10 = 7
+$$
+$$
+10 + 5 + (-8) = 7
+$$
+$$
+10 + (-8) + 5 = 7
+$$
+$$
+5 + 10 + (-8) = 7
+$$
+$$
+5 + (-8) + 10 = 7
+$$
 
 Je ziet, onafhankelijk van de volgorde van de termen krijgen we steeds dezelfde oplossing.
 
@@ -67,29 +81,45 @@ Je ziet, onafhankelijk van de volgorde van de termen krijgen we steeds dezelfde 
 
 Wanneer er **haakjes** in een bewerking staan, betekent het dat we eerst moeten uitrekenen wat er binnen de haakjes staat. Bijvoorbeeld
 
-$$87 + (21 + 5)$$
+$$
+87 + (21 + 5)
+$$
 
 Dan moeten we eerst de $21 + 5$ die tussen de haakjes staat uitrekenen om vervolgens de volledige uitkomst te berekenen:
 
-$$87 + \orange{(21 + 5)} = 87 + \orange{26} = 113$$
+$$
+87 + \orange{(21 + 5)} = 87 + \orange{26} = 113
+$$
 
 Maar wat als de opgave als volgt was?
 
-$$(87 + 21) + 5$$
+$$
+(87 + 21) + 5
+$$
 
 Dan moeten we eerst de $87 + 21$ uitrekenen:
 
-$$\orange{(87 + 21)} + 5 = \orange{108} + 5 = 113$$
+$$
+\orange{(87 + 21)} + 5 = \orange{108} + 5 = 113
+$$
 
 En wat zien we?! We krijgen dezelfde uitkomst! Zelfs wanneer we de **haakjes helemaal weglaten**, krijgen we dezelfde uitkomst:
 
-$$87 + 21 + 5 = 113$$
+$$
+87 + 21 + 5 = 113
+$$
 
 Het maakt voor de optelling van de gehele getallen **niet uit waar er haakjes staan**. We zeggen dat de **optelling van gehele getallen associatief** is. Een ander voorbeeld:
 
-$$\big(15 + (-4)\big) + 22 = 11 + 22 = 33$$
-$$15 + (-4 + 22) = 15 + 18 = 33$$
-$$15 + (-4) + 22 = 33$$
+$$
+\big(15 + (-4)\big) + 22 = 11 + 22 = 33
+$$
+$$
+15 + (-4 + 22) = 15 + 18 = 33
+$$
+$$
+15 + (-4) + 22 = 33
+$$
 
 Merk op dat de haakjes rond de $-4$ niets met associativiteit te maken hebben. Die staan er enkel zodat het minteken niet zou "botsen" met het plusteken. Anders zouden we iets krijgen als $15 + - 4 + 22$ en dat leest moeilijk. Veel properder (en juister) is $15 + (-4) + 22$.
 
@@ -124,7 +154,9 @@ Net zoals bij een optelling, kunnen we ook een aftrekking voorstellen op een get
 
 Wat als we nu een **negatief getal** willen aftrekken? Bijvoorbeeld:
 
-$$12 - (-8)$$
+$$
+12 - (-8)
+$$
 
 We zetten eerst $12$ stappen naar rechts, maar wat dan? $8$ stappen naar rechts of naar links? Één minteken wil zeggen: "naar links". Twee mintekens wil terug zeggen: "naar rechts". Dus: $12$ stappen naar rechts en vervolgens $8$ stappen opnieuw naar rechts. We komen uit op $20$:
 
@@ -132,7 +164,9 @@ $$12 - (-8) = 20$$
 
 Merk op dat dit hetzelfde is als:
 
-$$12 + 8 = 20$$
+$$
+12 + 8 = 20
+$$
 
 We zeggen dat **twee opeenvolgende mintekens** hetzelfde is als **één plusteken**. Vind je dat vreemd? We zullen even proberen uitleggen waarom dat eigenlijk logisch is. Een minteken betekent niets meer dan "**het tegengestelde van**":
 
@@ -166,15 +200,21 @@ Wanneer we nu een aftrekking met een negatief getal tegenkomen, is het dus niet 
 
 Wat als dat eerste getal nu ook negatief is? Bijvoorbeeld,
 
-$$-16 - (-20)$$
+$$
+-16 - (-20)
+$$
 
 Wel, dan doen we precies hetzelfde. De $-(-20)$ wordt terug $+$ en we krijgen de optelling van een negatief en positief getal:
 
-$$-16 - (-20) = -16 + 20$$
+$$
+-16 - (-20) = -16 + 20
+$$
 
 Dat lezen we als: "We gaan eerst $16$ stappen *naar links* en vervolgens $20$ stappen *naar rechts*". We komen dan uit op $4$:
 
-$$-16 - (-20) = -16 + 20 = 4$$
+$$
+-16 - (-20) = -16 + 20 = 4
+$$
 
 Enkele andere voorbeelden:
 
@@ -187,8 +227,12 @@ Enkele andere voorbeelden:
 
 In tegenstelling tot de optelling van gehele getallen, is de **aftrekking van gehele getallen NIET commutatief**! We mogen de termen van een aftrekking **niet zomaar van plaats veranderen**. Bijvoorbeeld:
 
-$$20 - 4 = 16$$
-$$4 - 20 = -16$$
+$$
+20 - 4 = 16
+$$
+$$
+4 - 20 = -16
+$$
 
 Je ziet dat we niet dezelfde uitkomst hebben wanneer we de $4$ en de $20$ van plaats verwisselen.
 
@@ -213,8 +257,12 @@ Je ziet dat we **niet dezelfde uitkomst** hebben wanneer we de haakjes van plaat
 
 Het is je misschien al opgevallen dat bijvoorbeeld $6 + (-2)$ dezelfde uitkomst heeft als $6 - 2$:
 
-$$6 + (-2) = 4$$
-$$6 - 2 = 4$$
+$$
+6 + (-2) = 4
+$$
+$$
+6 - 2 = 4
+$$
 
 Dat is niet toevallig. Je kunt een **aftrekking altijd herschrijven als een optelling**. Dat is heel handig, want daardoor krijgen we ook alle eigenschappen van een optelling. Wanneer je een aftrekking herschrijft als een optelling, kan je de **termen wél van plaats veranderen**. Dat kan niet bij een aftrekking.
 
@@ -240,7 +288,9 @@ De onderdelen van een vermenigvuldiging noemen we de **factoren**. Tussen de fac
 
 Een vermenigvuldiging is eigenlijk een manier om een **optelling van dezelfde getallen korter** te schrijven.
 
-$$10 \cdot \orange{2} = \underbrace{10 + 10}\_{\orange{2}\ \text{keer}} = 20$$
+$$
+10 \cdot \orange{2} = \underbrace{10 + 10}\_{\orange{2}\ \text{keer}} = 20
+$$
 
 Je zou $10 \cdot 2$ kunnen lezen als: "zet $10$ keer $2$ stappen naar rechts". Dan heb je in totaal $20$ stappen naar rechts gezet, dus $10 \cdot 2 = 20$.
 
@@ -248,7 +298,9 @@ Je zou $10 \cdot 2$ kunnen lezen als: "zet $10$ keer $2$ stappen naar rechts". D
 
 Waaraan denk je dan dat $3 \cdot (-2)$ gelijk is? Wel, je kunt $3\cdot (-2)$ lezen als "zet $3$ keer $2$ stappen *naar links*". (Naar *links* omdat er een minteken voor de $2$ staat.) Je hebt dan in totaal $6$ stappen *naar links* gezet, dus dat is hetzelfde als $-6$.
 
-$$3\cdot (-2) = -6$$
+$$
+3\cdot (-2) = -6
+$$
 
 Wanneer we een **positief en negatief** getal met elkaar vermenigvuldigen, gaat de **uitkomst altijd negatief** zijn. Hetzelfde geldt trouwens voor het vermenigvuldigen van een **negatief en positief** getal. Enkele voorbeelden:
 
@@ -272,15 +324,21 @@ Een beetje vreemd dat twee keer *min* plotseling *plus* geeft, niet? Hoe komt da
 
 Probeer even mee te volgen. Het tegengestelde van
 
-$$2 \cdot (-5)$$
+$$
+2 \cdot (-5)
+$$
 
 is dus (let op het minteken voor de $2$):
 
-$$-2 \cdot (-5)$$
+$$
+-2 \cdot (-5)
+$$
 
 De uitkomst van $2 \cdot (-5)$ moet dan ook het **tegengestelde** zijn van de uitkomst van $-2 \cdot (-5)$. We weten al dat
 
-$$2 \cdot (-5) = -10$$
+$$
+2 \cdot (-5) = -10
+$$
 
 De uitkomst van $-2 \cdot (-5)$ moet dus het **tegengestelde** zijn van $-10$. En dat is $10$!
 
@@ -323,13 +381,17 @@ Gelukkig is er ook **één algemene rekenregel** die we met **eender welk aantal
 
 Stel bijvoorbeeld dat we de volgende vermenigvuldiging moeten uitrekenen:
 
-$$-5 \cdot (-2) \cdot (-4)$$
+$$
+-5 \cdot (-2) \cdot (-4)
+$$
 
 Dat is een voorbeeld van een **gedurig product**. Dat is een product dat bestaat uit **meer dan twee factoren**. Hoe kunnen we de uitkomst van dit gedurig product uitrekenen?
 
 Wel, ten eerste staan er **drie** mintekens. Er staat dus een **oneven aantal mintekens** in de vermenigvuldiging. De uitkomst zal dus **negatief** zijn. Eens we het teken kennen, moeten we enkel nog de absolute waarde van de uitkomst berekenen. Dat doen we door de absolute waarde van de getallen zelf te vermenigvuldigen: $5 \cdot 2 \cdot 4 = 40$. De uitkomst van bovenstaande vermenigvuldiging is dus:
 
-$$-5 \cdot (-2) \cdot (-4) = -40$$
+$$
+-5 \cdot (-2) \cdot (-4) = -40
+$$
 
 Om een gedurige som uit te rekenen neem je dus de volgende stappen:
 
@@ -338,7 +400,9 @@ Om een gedurige som uit te rekenen neem je dus de volgende stappen:
 
 Een ander voorbeeld:
 
-$$-3 \cdot 6 \cdot (-5) \cdot 2$$
+$$
+-3 \cdot 6 \cdot (-5) \cdot 2
+$$
 
 1. **Bepaal het teken**: We zien **twee mintekens**. Er staat dus een **even aantal mintekens** in de vermenigvuldiging. De uitkomst zal dus **positief** zijn
 2. **Bereken de absolute waarde**: $3 \cdot 6 \cdot 5 \cdot 2 = 180$
@@ -413,7 +477,9 @@ De laatste eigenschap van de vermenigvuldiging van gehele getallen zegt dat deze
 
 Stel bijvoorbeeld dat we de volgende vermenigvuldiging moeten uitrekenen:
 
-$$3 \cdot (5 + 2 + 4)$$
+$$
+3 \cdot (5 + 2 + 4)
+$$
 
 De eerste manier om dit uit te rekenen, is door eerst gewoon uit te rekenen wat er tussen de haakjes staat. Dan maken we geen gebruik van de distributieve eigenschap.
 
@@ -478,9 +544,13 @@ Enkele voorbeelden:
 
 Je kunt het deeltal en de deler van een deling **niet zomaar van plaats verwisselen**. De deling van gehele getallen is dus **niet commutatief**. Een voorbeeld:
 
-$$8 : (-2) = -4$$
+$$
+8 : (-2) = -4
+$$
 
-$$-2 : 8 = -\frac{1}{4}$$
+$$
+-2 : 8 = -\frac{1}{4}
+$$
 
 Je ziet dat we **niet dezelfde uitkomst** krijgen wanneer we het deeltal en de deler omwisselen.
 
