--- a/src/content/lessen/wiskunde/rekenen_rationaal/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/volgorde_van_de_bewerkingen/index.mdx
@@ -20,7 +20,9 @@ daarom toch nog eens best alles proper opsommen (ba dum tss 🥁).
 ## De verkeersregels van het rekenen
 
 Hoe moet je een wiskundige uitdrukking als
-$4 - 5 \cdot 8 ^ 2$
+$$
+4 - 5 \cdot 8 ^ 2
+$$
 uitrekenen?
 
 Zo?
