--- a/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
@@ -54,16 +54,20 @@ Een vierkantswortel met een **negatief grondtal** is **niet gedefinieerd**.
 ## Een vierkantswortel van breuken en kommagetallen
 De wortel van een breuk nemen gaat op een gelijkaardige manier als de macht van een breuk. Als we een **vierkantswortel nemen van een volledige breuk** willen berekenen, mogen we namelijk de **vierkantswortel** nemen van de **teller en noemer** apart.
 
-$$\sqrt{\frac{9}{16}} = \frac{\sqrt{9}}{\sqrt{16}} = \frac{3}{4}$$
+$$
+\sqrt{\frac{9}{16}} = \frac{\sqrt{9}}{\sqrt{16}} = \frac{3}{4}
+$$
 
 In symbolen:
-$$\sqrt{\frac{a}{b}} = \frac{\sqrt{a}}{\sqrt{b}}$$
+$$
+\sqrt{\frac{a}{b}} = \frac{\sqrt{a}}{\sqrt{b}}
+$$
 
 ## Samengevat
 <Attention title="De positieve vierkantswortel">
 
 Een vierkantswortel is het **omgekeerde van een kwadraat**. Algemeen geldt:
-$\sqrt{\green{a}} = \orange{b}$ als, en slechts als $ \orange{b}^2 = \green{a}$ waarbij $b \geq 0$. De vierkantswortel
+$\sqrt{\green{a}} = \orange{b}$ als, en slechts als $\orange{b}^2 = \green{a}$ waarbij $b \geq 0$. De vierkantswortel
 van een negatief grondtal is **niet gedefinieerd**.
 </Attention>
 
@@ -72,5 +76,7 @@ van een negatief grondtal is **niet gedefinieerd**.
 Om de **vierkantswortel van een breuk** te berekenen, neem je de **wortel van teller en noemer**.
 
 In symbolen:
-$$\sqrt{\frac{a}{b}} = \frac{\sqrt{a}}{\sqrt{b}}$$
+$$
+\sqrt{\frac{a}{b}} = \frac{\sqrt{a}}{\sqrt{b}}
+$$
 </Attention>
